Added button that displays map